# irssyc

./: .gitignore  CMakeLists.txt  Makefile  README  README.org  USAGE.org  default.theme  install-pre.sh  irssi-0.8.12-tg-0.3-irc.patch  irssi-0.8.12-tg-0.3-perl.patch  irssi-0.8.12-tg-0.3-query-visible_name.patch  irssi-0.8.12-tg-0.3-session.patch  irssi-0.8.12-tg-0.3.patch  irssi-0.8.12-tg.patch  irssi-0.8.14-tg.patch  perlPSYC-0.25-tg.patch  psyc.pl  startup
core/: Makefile  module.h  psyc-channels.c  psyc-channels.h  psyc-core.c  psyc-queries.c  psyc-queries.h  psyc-servers.c  psyc-servers.h  psyc.h
lib/Net/: PSYC.pm  PSYC.pm-0.25
lib/Net/PSYC/: Circuit.pm  Client.pm  Irssi.pm
lib/Net/PSYC/Irssi/: Common.pm  Window.pm
lib/Net/PSYC/Irssi/Window/: Channel.pm  Friends.pm  Person.pm  Place.pm  Status.pm
src/: CMakeLists.txt  module.h  psyc-channels.c  psyc-channels.h  psyc-commands.c  psyc-commands.h  psyc-core.c  psyc-formats.c  psyc-formats.h  psyc-servers.c  psyc-servers.h
